tests/ui/derive-invariant/helper-empty/expected
error: Cannot derive impl for `PositivePoint`
   |
| #[derive(kani::Invariant)]
   |          ^^^^^^^^^^^^^^^
   |
note: safety constraint in field `x` could not be parsed: expected attribute arguments in parentheses: #[safety_constraint(...)]
